fix: graph auto-selection on mobile, sidebar background, extra graph padding
Agent-Logs-Url: https://github.com/npmgraph/npmgraph/sessions/24e5dfcd-060b-46f6-9291-aebec74f8bc4

--- a/components/Pane.module.scss
+++ b/components/Pane.module.scss
@@ -22,5 +22,6 @@
     padding-bottom: 1em;
     min-height: 200px;
     box-shadow: none;
+    background-color: transparent;
   }
 }
